fixed overflow

--- a/Array/main.scss
+++ b/Array/main.scss
@@ -25,8 +25,9 @@ a{
     display: flex;
     flex-direction: row-reverse;
     .mobile-nav{
-        transform: translate(100%);
-        position: absolute;
+        overflow: hidden;
+        transform: translateX(100%);
+        position: fixed;
         width: 90%;
         height: 100vh;
         background-color: white;
